--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+/* Referenced some default colors in tailwindcss */
+/* and the website https://mycolor.space */
+@layer {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: #e5e7eb;
+    --foreground: #030712;
+    --border: #3c3a40;
+  }
+
+  .dark {
+    --background: #141218;
+    --foreground: #fbf8ff;
+    --border: #3c3a40;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply text-[color:--foreground] border-[color:--border] transition-colors duration-300;
+  }
+
+  body {
+    @apply bg-[--background];
+  }
 }
